# watch-with-fox

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
chrome_extension/: .env.example  README.md  background.js  biome.json  build.js  content.js  manifest.json  package.json  sidepanel.html  styles.css
chrome_extension/promo/: build.py
chrome_extension/src/: config.js  persona.js  session.js  sidepanel.js
chrome_extension/src/audio/: audio-graph.js
chrome_extension/src/livekit/: room-controller.js
chrome_extension/src/messaging/: tab-bridge.js
chrome_extension/src/transport/: api.js  tab-capture.js
chrome_extension/src/ui/: avatar-slots.js  pacing-controls.js
server/: .env.example  CLAUDE.md  Dockerfile  Dockerfile.api  README.md  fly.toml.example  livekit.toml.example  pyproject.toml
server/migrations/: 001_init.sql  002_conversation_turns.sql
server/src/podcast_commentary/agent/: angles.py  comedian.py  commentary.py  commentary_pipeline.py  commentary_scheduler.py  control_channel.py  director.py  fox_config.py  intro_sequencer.py  main.py  persona_runtime.py  playout_waiter.py  podcast_pipeline.py  podcast_player.py  prompts.py  room_state.py  settings_controller.py  skip_coordinator.py  speech_gate.py  task_supervisor.py  user_presence.py  user_turn.py  verbalized_sampling.py
server/src/podcast_commentary/agent/fox_configs/: __init__.py  alien.py  chaos_agent.py  david_sacks.py  default.py  fox.py
server/src/podcast_commentary/api/: app.py
server/src/podcast_commentary/api/routes/: sessions.py
server/src/podcast_commentary/core/: config.py  db.py  youtube.py
server/src/podcast_commentary/core/data/: privacy.html
server/tests/: test_api_sessions.py
web/: CLAUDE.md  package.json
web/public/: rumi-idle.webm
web/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
web/src/app/watch/: page.tsx
web/src/components/: AvatarSidebar.tsx  CommentaryControls.tsx  VideoPlayer.tsx
web/src/lib/: api.ts
