[project]
name = "watch-with-fox-server"
version = "0.1.0"
description = "AI comedian avatar that delivers real-time comedic commentary while you watch YouTube"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "livekit-api~=1.0",
    "livekit-agents~=1.4.6",
    "fastapi[standard]",
    "pydantic-settings",
    "python-dotenv",
    "asyncpg",
]

[dependency-groups]
agent = [
    "livekit-agents[silero,groq,elevenlabs,turn-detector,lemonslice]~=1.4.6",
    "livekit-agents~=1.4.6",
]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "agent"]

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_commentary"]

[tool.ruff]
line-length = 100
